Fix for alignment
direction: auto isn't a thing appearently.

--- a/src/components/middle/MiddleColumn.scss
+++ b/src/components/middle/MiddleColumn.scss
@@ -180,7 +180,7 @@
 
       #editable-message-text {
         text-align: justify;
-        direction: auto;
+        unicode-bidi: plaintext;
         height: 3.5rem !important;
 
         @media (max-width: 600px) {
